--- a/WordDef.css
+++ b/WordDef.css
@@ -12,6 +12,7 @@ body {
 
 #inputForm {
 	width: 300px;
+	height: 30px;
 }
 
 #title {
@@ -41,6 +42,11 @@ body {
 
 #relationsEntrantes {
 	display: none;
+}
+
+.withPointer {
+	cursor: pointer;
+	display: inline;
 }
 
 .typesRelSortantes {
